added picture site

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 		<div id="menu">
 
 			<ul>
-				<li><a href="./testsida.html">test</a></li>
+				<li><a href="./photoshopsida.html">Photos</a></li>
 				<li>test2</li>
 				<li>test3</li>
 				<li>sista test</li>
@@ -26,7 +26,7 @@
 
 			<h1> TJAAAAAAA :D</h1>
 <h6>(sneel heest)</h6>
-			
+
 		</div>
 	</div>
 	
