--- a/public/photoshopsida.html
+++ b/public/photoshopsida.html
@@ -14,7 +14,7 @@
 		<div id="menu">
 
 			<ul>
-				<li><a href="./testsida.html">test</a></li>
+				<li><a href="./photoshopsida.html">Photos</a></li>
 				<li>test2</li>
 				<li>test3</li>
 				<li>sista test</li>
@@ -24,8 +24,8 @@
 
 		<div id="content">
 
-			<h1>TEEEEEST!!!</h1>
-			
+			<img src="layer-3.png">
+
 		</div>
 	</div>
 	
