--- a/public/potato.html
+++ b/public/potato.html
@@ -14,7 +14,7 @@
 		<div id="menu">
 
 			<ul>
-				<li><a href="./testsida.html">test</a></li>
+				<li><a href="./photoshopsida.html">Photos</a></li>
 				<li>test2</li>
 				<li>test3</li>
 				<li>sista test</li>
@@ -25,7 +25,7 @@
 		<div id="content">
 
 			<img src="potato.jpg">
-			
+
 		</div>
 	</div>
 	
